# etl_generators_study

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
src/: settings.py
src/slides/a_iterators/: app.py  slide.ipynb
src/slides/b_load/: app.py  slide.ipynb
src/slides/c_extract/: app.py  slide.ipynb
src/slides/d_transform/: app.py  slide.ipynb
src/utils/: profilers.py
src/utils/psycopg2/: __init__.py  connection.py  loader.py
src/utils/sqlite3/: __init__.py  connection.py
